syntax = "proto3";

option csharp_namespace = "Image.Service.ProtoClass";

package Image;

service ImageService {
  rpc GetImage (GrpcInt) returns (ImageResponse);
}

//=========================Request-=============================
message GrpcInt
{
  int32 Value = 1;
}

//=========================Response-=============================

message ImageResponse {
  int32 id = 1;
  int32 modelId = 2;
  string imageUrl = 3;
}


